--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "go": "ng serve --host 0.0.0.0",
+    "dev": "ng build --bh /home/ -op ../home -w",
+    "prod": "ng build --bh /home/ -op ../home -prod -e=prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -22,7 +26,16 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "bootstrap": ">=3.0.0",
+    "bootstrap-datepicker": "1.6.4",
+    "bootstrap-timepicker": "^0.5.2",
+    "file-saver": "^1.3.3",
+    "font-awesome": "^4.7.0",
+    "jquery": ">=2.2.1",
+    "moment": "^2.17.1",
+    "ng2-datetime": "^1.3.2",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
